fix visibility

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
 }
 
 .wrap {
+  visibility: hidden;
   max-width: 1400px;
   width: 100%;
   margin-inline: auto;
